--- a/css/main.css
+++ b/css/main.css
@@ -320,6 +320,7 @@
   		transform-style: preserve-3d;
   		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/bg/section1.jpg', sizingMethod='scale');
         -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/bg/section1.jpg', sizingMethod='scale')";
+        overflow-y: hidden !important; /* Needed otherwise there's a horizontal scroll bar on mobile. */
 	}
 
 	@media (max-width: 991px) {
